<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practical Time Zone</string>
    <string name="dummy_button">Exit</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="country_code">Country Code:</string>
    <string name="extra_info">Extra Info:</string>
    <string name="place_name">Place Name:</string>
    <string name="time_zone">Timezone:</string>
    <string name="time">Time:</string>
    <string name="time_zone_time_request">Timezone and Time request</string>
    <string name="not_found">Not Found!</string>
    <string name="timezone_warning">Your timezone will appear here</string>
    <string name="separator">sperator</string>
    <string name="checking_times" translatable="false">Checking Times(press to cancel...)</string>
    <string name="click_for_controls" translatable="false">Click here for controls</string>
    <string name="many_countries" translatable="false">(many countries have multiple timezones. we need a place for accuracy)</string>
    <string name="return_text">Return</string>
    <string name="need_to" translatable="false">You need to insert a place!</string>

</resources>
